# A1220-lab1-Abror

./: .gitignore  Makefile  README.md  pyproject.toml
src/yarea/: file_io.py  gpt.py  main.py
